# chharcop

./: .gitignore  CHANGELOG.md  CHHARCOP-BUILD-TREE.md  DISCLAIMER_HEADER.md  LEGAL.md  LICENSE  LICENSE_DISCLAIMER.md  PRIVACY_POLICY.md  README.md  TERMS_OF_USE.md  chharcop-research-report.md  chharcop-status.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: changelog.yml  ci.yml
chharcop/: __init__.py  core.py  models.py
chharcop/cli/: __init__.py  main.py
chharcop/evidence/: __init__.py  hash_chain.py  pdf_generator.py
chharcop/gaming/: __init__.py
chharcop/gaming/collectors/: __init__.py  base.py  discord_collector.py  gamertag_osint.py  steam_collector.py
chharcop/intake/: __init__.py  email_intake.py  phone_intake.py
chharcop/report/: __init__.py  auto_submit.py  form_checker.py
chharcop/report/agency/: __init__.py  ftc.py  google_sb.py  ic3.py  platform_reports.py
chharcop/social/: __init__.py  patterns.py  report.py  scanner.py
chharcop/social/collectors/: __init__.py  base.py  reddit_collector.py  twitter_collector.py  username_osint.py
chharcop/training/: __init__.py  dataset.py  metrics.py  trainer.py
chharcop/utils/: __init__.py  config.py  url_validator.py
chharcop/vpn/: __init__.py  manager.py  tor_integration.py  wireguard.py
chharcop/web/: __init__.py
chharcop/web/collectors/: __init__.py  base.py  dns_collector.py  metadata_collector.py  ssl_collector.py  whois_collector.py
docs/: MONETIZATION_STRATEGY.md  RISK_SCORING.md  SECURITY_AUDIT.md
evidence/: calibration_amazon_com.json  calibration_beenverified_com.json  calibration_google_com.json  calibration_lookups_io.json  calibration_spokeo_com.json
evidence/calibration/: calibration_facebook_com.json  calibration_fastpeoplesearch_com.json  calibration_paypal_com.json  calibration_peoplelooker_com.json  calibration_truthfinder_com.json
tests/: __init__.py  test_models.py  test_utils.py
